Done, dont know if it works

--- a/#Information Page.html
+++ b/#Information Page.html
@@ -1,36 +1,45 @@
 #Information Page
 <html>
  <head>
-     <title>Cloudy Cafe Information Page</title>
+     <title> Cloudy Cafe Information Page </title>
  </head>   
 
+<style>
+    body {background-color: #ffffcc;}
+    h1 {color: black; font-size: 60;}
+    h2 {color: black; font-size: 50;}
+    p {color: black; font-size: 20;}
+</style>
 
+<H1> Cloudy Cafe Information Page </H1>
 
+<H3> About Us! </H3>
+<p> Our buissnes was originally set up in 2804 and we have 
+    been thriving ever since! We are part of a long chain of 
+    buissneses including: LUCID (the clothing brand)
+    and ThunderStorm venues.
+    We always try to put our customers first and listen to any
+    feedback given to improve yours, and others, experience
+    with us. </p>
 
+<H3> More about our company! </H3>
+<p> As you have read we are one paart of a larger corportion,
+    that being: LiberosisCorps. Started in 2754, 50 years before
+    our cafes were created, an idea to create a wide spread 
+    buissness was founded; creatin a surplus amount of job
+    opertunities in richer and poorer areas.
 
+    Founded by Lucid Liberosis, also known a LL, the company 
+    has been passed on throuh three generations until its 
+    reached todays founder: Apollo Liberosis. The company is still
+    growing and there are more plans and opertunities in
+    future, but for now we will have to see what will happen. </p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<H2> Contact Us:</H2>
+<ul>
+<li> Telephone: 0800960240
+<li> Email: CloudyCafe@libcorps.LN
+</ul>
 
 
 
