--- a/#Information Page.html
+++ b/#Information Page.html
@@ -35,6 +35,12 @@
     growing and there are more plans and opertunities in
     future, but for now we will have to see what will happen. </p>
 
+<H3> Extra </H3>
+#link to rating and complaints.
+#Company jobs and in depth Information.
+#Links to oter webs, cafe and zodiac.
+
+
 <H2> Contact Us:</H2>
 <ul>
 <li> Telephone: 0800960240
