--- a/#Information Page.html
+++ b/#Information Page.html
@@ -13,6 +13,8 @@
 
 <H1> Cloudy Cafe Information Page </H1>
 
+#add photo of company logo here
+
 <H3> About Us! </H3>
 <p> Our buissnes was originally set up in 2804 and we have 
     been thriving ever since! We are part of a long chain of 
@@ -35,6 +37,12 @@
     growing and there are more plans and opertunities in
     future, but for now we will have to see what will happen. </p>
 
+    #Add photo of corportion logo here
+
+<p> Next Page </p>
+#Add link 
+
+
 <H3> Extra </H3>
 #link to rating and complaints.
 #Company jobs and in depth Information.
@@ -44,7 +52,7 @@
 <H3> Contact Us:</H3>
 <ul>
 <li> Telephone: 0800960240
-<li> Email: CloudyCafe@libcorps.LN
+<li> Email: Cloudycafe@libcorps.ln
 </ul>
 
 
