Images not working

--- a/#Information Page.html
+++ b/#Information Page.html
@@ -14,6 +14,7 @@
 <H1> Cloudy Cafe Information Page </H1>
 
 #add photo of company logo here
+<p><img scr="https://i.pinimg.com/736x/85/32/e0/8532e029b7531bf156d6ef663c6229e5.jpg" width ="300" height="300"</p>
 
 <H3> About Us! </H3>
 <p> Our buissnes was originally set up in 2804 and we have 
