--- a/#Information Page 1.html
+++ b/#Information Page 1.html
@@ -38,10 +38,10 @@
     growing and there are more plans and opertunities in
     future, but for now we will have to see what will happen. </p>
 
+<p><a href="#cafe program.py">Our menu page</a></p>
+
     #Add photo of corportion logo here
 
-<p> Next Page </p>
-#Add link 
 
 
 <H3> Extra </H3>
