still not working

--- a/#Information Page 1.html
+++ b/#Information Page 1.html
@@ -38,7 +38,7 @@
     growing and there are more plans and opertunities in
     future, but for now we will have to see what will happen. </p>
 
-<p><a href="#experimental page 2,html">Our menu page</a></p>
+<p><a href="#experimental page 2.html">Our menu page</a></p>
 
     #Add photo of corportion logo here
 
