--- a/#Information Page 1.html
+++ b/#Information Page 1.html
@@ -14,6 +14,7 @@
 <H1> Cloudy Cafe Information Page </H1>
 
 #add photo of company logo here
+<body>
 <p><img scr="https://i.pinimg.com/736x/85/32/e0/8532e029b7531bf156d6ef663c6229e5.jpg" width ="300" height="300"</p>
 
 <H3> About Us! </H3>
@@ -38,7 +39,7 @@
     growing and there are more plans and opertunities in
     future, but for now we will have to see what will happen. </p>
 
-<p><a href="#experimental page 2.html">Our menu page</a></p>
+<a href="#experimental page 2.html">Our menu <page></a>
 
     #Add photo of corportion logo here
 
@@ -56,6 +57,7 @@
 <li> Email: Cloudycafe@libcorps.ln
 </ul>
 
+</body>
 
 
 </html>
