--- a/#Information Page 1.html
+++ b/#Information Page 1.html
@@ -15,7 +15,7 @@
 
 #add photo of company logo here
 <body>
-<p><img scr="https://i.pinimg.com/736x/85/32/e0/8532e029b7531bf156d6ef663c6229e5.jpg" width ="300" height="300"</p>
+<p><img src="/assets/images/liberosis-logo.jpg" width ="300" height="300"></p>
 
 <H3> About Us! </H3>
 <p> Our buissnes was originally set up in 2804 and we have 
