--- a/#Information Page 1.html
+++ b/#Information Page 1.html
@@ -41,14 +41,14 @@
 
 <a href="#experimental page 2.html">Our menu <page></a>
 
-    #Add photo of corportion logo here
+    <!--Add photo of corportion logo here-->
 
 
 
 <H3> Extra </H3>
-#link to rating and complaints.
+<!--link to rating and complaints.
 #Company jobs and in depth Information.
-#Links to oter webs, cafe and zodiac.
+#Links to oter webs, cafe and zodiac.-->
 
 
 <H3> Contact Us:</H3>
