all pictures fixed

--- a/#Information Page 1.html
+++ b/#Information Page 1.html
@@ -40,7 +40,7 @@
     future, but for now we will have to see what will happen. </p>
 
 <a href="#experimental page 2.html">Our menu <page></a>
-
+<p><img src="/assets/images/cafe logo unedited.jpg" width ="300" height ="300"></p>
     <!--Add photo of corportion logo here-->
 
 
