all pictures added

--- a/#Information Page 1.html
+++ b/#Information Page 1.html
@@ -1,4 +1,4 @@
-#Information Page
+<!--Information Page-->
 <html>
  <head>
      <title> Cloudy Cafe Information Page </title>
@@ -13,9 +13,9 @@
 
 <H1> Cloudy Cafe Information Page </H1>
 
-#add photo of company logo here
 <body>
-<p><img src="/assets/images/liberosis-logo.jpg" width ="300" height="300"></p>
+<H3>....LIBEROSIS.CORP....</H3>
+<p><img src="/assets/images/liberosis-logo.jpg" width ="200" height="200"></p>
 
 <H3> About Us! </H3>
 <p> Our buissnes was originally set up in 2804 and we have 
@@ -40,8 +40,7 @@
     future, but for now we will have to see what will happen. </p>
 
 <a href="#experimental page 2.html">Our menu <page></a>
-<p><img src="/assets/images/cafe logo unedited.jpg" width ="300" height ="300"></p>
-    <!--Add photo of corportion logo here-->
+<p><img src="/assets/images/edited cloudy logo.PNG" width ="200" height ="200"></p>
 
 
 
@@ -53,7 +52,7 @@
 
 <H3> Contact Us:</H3>
 <ul>
-<li> Telephone: 0800960240
+<li> Telephone: 08009602407
 <li> Email: Cloudycafe@libcorps.ln
 </ul>
 
