other page link working

--- a/#Information Page 1.html
+++ b/#Information Page 1.html
@@ -31,7 +31,7 @@
     that being: LiberosisCorps. Started in 2754, 50 years before
     our cafes were created, an idea to create a wide spread 
     buissness was founded; creatin a surplus amount of job
-    opertunities in richer and poorer areas.
+    opportunities in richer and poorer areas.
 
     Founded by Lucid Liberosis, also known a LL, the company 
     has been passed on throuh three generations until its 
@@ -39,7 +39,7 @@
     growing and there are more plans and opertunities in
     future, but for now we will have to see what will happen. </p>
 
-<a href="#experimental page 2.html">Our menu <page></a>
+<a href="page/added/#experimental page 2.html">Our menu <page></a>
 <p><img src="/assets/images/edited cloudy logo.PNG" width ="200" height ="200"></p>
 
 
