--- a/#Information Page 1.html
+++ b/#Information Page 1.html
@@ -39,7 +39,7 @@
     growing and there are more plans and opertunities in
     future, but for now we will have to see what will happen. </p>
 
-<a href="page/added/#experimental page 2.html">Our menu <page></a>
+<a href="page/added/#cafe program.py">Our menu <page></a>
 <p><img src="/assets/images/edited cloudy logo.PNG" width ="200" height ="200"></p>
 
 
