python is opening but not running

--- a/#Information Page 1.html
+++ b/#Information Page 1.html
@@ -41,6 +41,8 @@
 
 <a href="page/added/#cafe program.py">Our menu <page></a>
 <p><img src="/assets/images/edited cloudy logo.PNG" width ="200" height ="200"></p>
+<!--opening but not running, like when you open it from the school web
+but it opens the code on explorer and not just the printed items.-->
 
 
 
